--- a/public/styles.css
+++ b/public/styles.css
@@ -268,6 +268,23 @@ p {
     float: left;
 }
 
+.btn-small.btn-image {
+    background: none;
+    border: none;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.btn-small.btn-image:not(.btn-active):hover {
+    transform: scale(1.1);
+}
+
+.btn-small.btn-image:not(.btn-active):not(:hover) {
+    filter: grayscale(100%);
+    opacity: 0.5;
+}
+
 .btn-small:not(:disabled) {
     cursor: pointer;
 }
